--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "puppeteer": "^10.2.0"
+    "dotenv": "^10.0.0"
   },
   "dependencies": {
-    "firebase": "^9.0.2"
+    "firebase": "^9.0.2",
+    "puppeteer": "^10.4.0"
   }
 }
