--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "firebase": "^9.0.2",
     "puppeteer": "^10.4.0"
   }
